fixes gap on subscriptions icons, removes one subscription from temporary user, adds username to reviews props

--- a/client/features/media/MediaDetail.css
+++ b/client/features/media/MediaDetail.css
@@ -167,5 +167,5 @@ form {
 
 .watchOnIcons {
   display: flex;
-  justify-content: space-evenly;
+  gap: 1em;
 }
